<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activitys.EditProfileActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<include
    android:id="@+id/EditProfileToolbarForm"
    layout="@layout/toolbar_edit_profile"/>

<ImageView
    android:src="@drawable/ic_baseline_person_pin_24"
    android:padding="10dp"
    android:id="@+id/editProfileImage"
    android:layout_marginTop="25dp"
    android:background="@drawable/profile_form"
    app:layout_constraintTop_toBottomOf="@id/EditProfileToolbarForm"
    app:layout_constraintBottom_toTopOf="@id/EditProfileNameForm"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:contentDescription="@string/profile" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditProfileNameForm"
        android:hint="@string/FamilyName"
        app:layout_constraintBottom_toTopOf="@id/EditProfileUsernameForm"
        app:layout_constraintTop_toBottomOf="@id/editProfileImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditProfileName"
            android:maxLength="70"
            android:digits="@string/digit_farsi"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditProfileUsernameForm"
        android:hint="@string/username_farsi"
        app:layout_constraintTop_toBottomOf="@id/EditProfileNameForm"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditProfileUsername"
            android:maxLength="45"
            android:digits="@string/digit_english"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditProfileEmailForm"
        android:hint="@string/email_farsi"
        app:layout_constraintTop_toBottomOf="@id/EditProfileUsernameForm"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditProfileEmail"
            android:maxLength="150"
            android:digits="@string/digit_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditProfilePhoneForm"
        android:hint="@string/phone_farsi"
        app:layout_constraintTop_toBottomOf="@id/EditProfileEmailForm"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditProfilePhone"
            android:maxLength="11"
            android:digits="@string/number"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/EditProfileSpinner"
        app:layout_constraintBottom_toTopOf="@id/EditProfileAddressForm"
        app:layout_constraintTop_toBottomOf="@id/EditProfilePhoneForm"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Spinner
            android:id="@+id/EditProfileProvince"
            app:layout_constraintLeft_toRightOf="@id/EditProfileCity"
            app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <Spinner
            android:id="@+id/EditProfileCity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/EditProfileProvince"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditProfileAddressForm"
        android:hint="@string/Address"
        app:layout_constraintTop_toBottomOf="@id/EditProfileSpinner"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditProfileAddress"
            android:maxLength="150"
            android:digits="@string/digit_farsi"
            android:inputType="textPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditProfileCompanyAddressForm"
        android:hint="@string/companyAddress"
        app:layout_constraintTop_toBottomOf="@id/EditProfileAddressForm"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditProfileCompanyAddress"
            android:maxLength="150"
            android:digits="@string/digit_farsi"
            android:inputType="textPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditProfileCompanyForm"
        android:hint="@string/companyName_farsi"
        app:layout_constraintTop_toBottomOf="@id/EditProfileCompanyAddressForm"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditProfileCompany"
            android:maxLength="70"
            android:digits="@string/digit_farsi"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/EditProfileBarthdayForm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EditProfileCompanyForm"
        app:layout_constraintBottom_toTopOf="@id/EditProfileSideForm">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/EditProfileBarthdayText"
        android:text="@string/Barthday_farsi"
        app:fontFamily="@font/b_nazanin"
        android:textColor="@color/Oli"
        android:textStyle="bold"
        android:textDirection="rtl"
        android:padding="13dp"
        android:gravity="right"
        android:paddingRight="25dp"
       style="@style/TextAppearance.Material3.BodyLarge"
app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/EditProfileBarthday"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/EditProfileBarthday"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="0dp"
            android:padding="13dp"
            android:textDirection="rtl"
            android:layout_height="match_parent"
            android:text="@string/Barthday_farsi"
            android:textStyle="bold"
            app:fontFamily="@font/b_nazanin"
            android:paddingRight="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/EditProfileBarthdayText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditProfileSideForm"
        android:hint="@string/Side_farsi"
        app:layout_constraintTop_toBottomOf="@id/EditProfileBarthdayForm"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditProfileSide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/EditProfileChangePassword"
        android:text="@string/ChangePasswordText"
        android:padding="10dp"
       android:gravity="right"
        android:textStyle="bold"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EditProfileSideForm"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/EditProfileAnim"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:lottie_rawRes="@raw/update"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>