<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.StoreFragment">

<com.google.android.material.tabs.TabLayout
  android:id="@+id/StoreTab"
 android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@+id/StoreContainer"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <com.google.android.material.tabs.TabItem
        android:id="@+id/StoreTabInventory"
        android:icon="@drawable/ic_inventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory"
        />
    <com.google.android.material.tabs.TabItem
        android:id="@+id/StoreTabTransaction"
        android:icon="@drawable/ic_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction"
        />

    <com.google.android.material.tabs.TabItem
        android:id="@+id/StoreTabRequestDeduct"
        android:icon="@drawable/ic_request_deduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_deduct"
        />
</com.google.android.material.tabs.TabLayout>
<FrameLayout
    android:id="@+id/StoreContainer"
  app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintTop_toBottomOf="@id/StoreTab"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_width="match_parent"
    android:layout_height="0dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>